# Backup

./: CMakeLists.txt  vcpkg.json
common/include/: file_utility.h
common/src/: file_utility.cpp
core/include/: bloom_frame_buffer_object.h  camera.h  element_buffer_object.h  error.h  frame_buffer_object.h  light.h  material.h  mesh.h  model.h  pipeline.h  renderer.h  shapes.h  texture.h  transform.h  vertex_array_object.h  vertex_attribute.h  vertex_buffer_object.h
core/src/: bloom_frame_buffer_object.cpp  camera.cpp  element_buffer_object.cpp  error.cpp  frame_buffer_object.cpp  light.cpp  material.cpp  mesh.cpp  model.cpp  pipeline.cpp  renderer.cpp  shapes.cpp  texture.cpp  transform.cpp  vertex_array_object.cpp  vertex_attribute.cpp
data/models/leo_magnus/: sword2.mtl
data/shaders/: blending.frag  blur.frag  colored_texture.frag  cube_map.frag  cube_map.vert  directional_light.frag  edge_detection.frag  gaussian_blur.frag  gray_scale.frag  instancing.frag  instancing.vert  kernel.frag  light_tangent.frag  light_tangent_model.frag  multiple_lights.frag  point_light.frag  point_light_normal_map.frag  reflection.frag  refraction.frag  reversed_colors.frag  screen_texture.vert  spot_light.frag  transform.vert  transform_tangent.vert  transform_tangent_model.vert  uni_color.frag
data/shaders/deferred_shading/: deferred_shading.frag  g_buffer.frag
data/shaders/final_scene/hdr/: equirectangular_to_cubemap.frag  hdr.frag  hdr_cubemap.frag
data/shaders/final_scene/pbr/: 3_channels_pbr_g_buffer.frag  brdf.frag  brdf.vert  deferred_pbr.frag  instanced_pbr_g_buffer.vert  pbr_g_buffer.frag  pbr_g_buffer.vert  prefilter.frag  total_deferred_pbr.frag  total_pbr_g_buffer.frag
data/shaders/final_scene/shadow/: instanced_simple_depth.vert  simple_depth.frag  simple_depth.vert
data/shaders/final_scene/ssao/: ssao.frag  ssao_blur.frag
data/shaders/final_scene/transform/: local_transform.vert  transform.vert
data/shaders/final_scene/visual_debug/: light_debug.frag
data/shaders/hdr/: bloom.frag  equirectangular_to_cubemap.frag  hdr.frag  hdr_cubemap.frag  hdr_cubemap.vert  hdr_dir_light.frag
data/shaders/hello_model/: model.frag  model.vert
data/shaders/hello_quad/: quad.vert
data/shaders/hello_triangle/: triangle.vert
data/shaders/hello_triangle_vao/: triangle_vao.vert
data/shaders/pb_bloom/: pb_bloom.frag
data/shaders/pbr/: brdf.frag  ibl_pbr.frag  irradiance_convultion.frag  pbr.frag  simple_pbr.frag  textured_pbr.frag  textured_pbr.vert
data/shaders/phong_light/: blinn_phong_light.frag  blinn_phong_light_map.frag  blinn_phong_light_model.frag  lamp.frag  lamp.vert  phong_light.frag  phong_light_map.frag
data/shaders/shadow/: cascaded_shadow.frag  depth_map_rendering.frag  shadow.frag  tang_transform_casc_shadow.vert  tangent_cascaded_shadow.frag  tangent_shadow.frag  tangent_transform_shadow.vert  transform_cascaded_shadow.vert  transform_shadow.vert
data/shaders/ssao/: ssao.frag  ssao_g_buffer.frag  ssao_lighting.frag  view_space_transform.vert
data/shaders/texture/: texture.frag  texture.vert
data/shaders/uniform_quad/: uniform_quad.frag  uniform_quad.vert
main/: main.cpp
main/include/: engine.h
main/include/scenes/: asteroids.h  blending.h  bloom_scene.h  cascaded_shadow_scene.h  cube_map.h  deferred_shading_scene.h  face_culling.h  final_scene.h  hello_model.h  hello_quad.h  hello_triangle.h  hello_triangle_vbo.h  light_casters.h  mirror.h  multiple_lights.h  normal_map.h  outline_cube.h  pb_bloom_scene.h  pbr_scene.h  phong_light.h  post_processing.h  scene.h  scene_manager.h  shadow_scene.h  ssao_scene.h  texture_quad.h  uniform_quad.h
main/src/: engine.cpp
main/src/scenes/: asteroids.cpp  blending.cpp  bloom_scene.cpp  cascaded_shadow_scene.cpp  cube_map.cpp  deferred_shading_scene.cpp  face_culling.cpp  final_scene.cpp  hello_model.cpp  hello_quad.cpp  hello_triangle.cpp  hello_triangle_vbo.cpp  light_casters.cpp  mirror.cpp  multiple_lights.cpp  normal_map.cpp  outline_cube.cpp  pb_bloom_scene.cpp  pbr_scene.cpp  phong_light.cpp  post_processing.cpp  scene_manager.cpp  shadow_scene.cpp  ssao_scene.cpp  texture_quad.cpp  uniform_quad.cpp
